--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,13 @@
 node_modules
+.env
+
+cypress/videos
+cypress/screenshots
+
+yarn-error.log
+.vscode/*
+
+instructions.md
+
+.vscode/*
+!.vscode/settings.json
