--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "test-automation",
   "version": "1.0.0",
   "description": "Cypress + Cucumber + Typescript ",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "repository": {
     "type": "git",
     "url": "git@borecorp_gh.github.com:borecz/Fenrir.git"
@@ -13,7 +10,49 @@
   "license": "ISC",
   "devDependencies": {
     "@badeball/cypress-cucumber-preprocessor": "^12.0.0",
+    "@bahmutov/cypress-esbuild-preprocessor": "^2.1.3",
+    "@esbuild-plugins/node-modules-polyfill": "^0.1.4",
+    "@typescript-eslint/eslint-plugin": "^5.32.0",
+    "@typescript-eslint/parser": "^5.32.0",
     "cypress": "^10.4.0",
+    "cypress-esbuild-preprocessor": "^1.0.2",
+    "dotenv": "^16.0.1",
+    "esbuild": "^0.14.53",
+    "eslint": "^8.21.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-prettier": "^4.2.1",
+    "gherkin-lint": "^4.2.2",
+    "husky": "^8.0.1",
+    "lint-staged": "^13.0.3",
+    "prettier": "^2.7.1",
     "typescript": "^4.7.4"
+  },
+  "cypress-cucumber-preprocessor": {
+    "nonGlobalStepDefinitions": true,
+    "stepDefinitions": [
+      "cypress/e2e/stepsDefinitions/*.step.{js,ts}"
+    ]
+  },
+  "scripts": {
+    "prepare": "husky install .husky",
+    "lint": "eslint . --ext .ts,.js --color --fix",
+    "format": "npx prettier -c '**/*.{ts,js,json,yml,yaml,md}'",
+    "format:fix": "npx prettier --loglevel=warn --write '**/*.{ts,js,json,yml,yaml,md}'",
+    "gherkin:lint": "npx gherkin-lint -c .gherkin-lintrc ./cypress/e2e/features/"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,ts, md}": [
+      "eslint",
+      "prettier --write"
+    ],
+    "*.feature": [
+      "yarn run gherkin:lint"
+    ]
   }
 }
