--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,14 @@
 {
-    "compilerOptions": {
-      "target": "es5",
-      "lib": ["es5", "dom"],
-      "types": ["cypress", "node"],
-      "baseUrl": "./",
-    },
-    "include": ["**/*.ts"]
+  "compilerOptions": {
+    "target": "ESNext",
+    "lib": ["es5", "dom"],
+    "types": ["cypress", "node"],
+    "baseUrl": "./",
+    "moduleResolution": "node"
+  },
+  "include": ["**/*.ts"],
+  "paths": {
+    "fixtures/*": ["cypress/fixtures/*"],
+    "pages/*": ["cypress/pages/*"]
   }
+}
