chore(commit): implemented pre-commit commitLint check via Husky
docs: added documentation for conventional commits

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,43 @@
 {
-    "editor.formatOnSave": true
+    "window.zoomLevel": 0,
+    "editor.tabSize": 2,
+    "files.exclude": {
+        "**/.DS_Store": true,
+        "**/.git": true,
+        "**/.hg": true,
+        "**/.svn": true,
+        "**/build": true,
+        "**/CVS": true
+    },
+    "editor.tabCompletion": "on",
+    "editor.formatOnPaste": true,
+    "editor.formatOnSave": true,
+    "editor.minimap.enabled": false,
+    "editor.mouseWheelZoom": true,
+    "editor.quickSuggestions": {
+        "other": true,
+        "comments": false,
+        "strings": true
+    },
+    "search.exclude": {
+        "**/node_modules": true,
+    },
+    "javascript.referencesCodeLens.enabled": true,
+    "typescript.referencesCodeLens.enabled": true,
+    "typescript.implementationsCodeLens.enabled": true,
+    "git.autofetch": "all",
+    "eslint.alwaysShowStatus": true,
+    "eslint.options": {
+        "extensions": [".js", ".ts"]
+    },
+    "eslint.validate": ["javascript","typescript"],
+    "cucumberautocomplete.syncfeatures": "cypress/e2e/features/**/*.feature",
+    "cucumberautocomplete.steps": [
+        "cypress/e2e/stepsDefinitions/**/*.step.ts"
+    ],
+    "typescript.tsdk": "node_modules/typescript/lib",
+    "editor.codeActionsOnSave": {
+        "source.fixAll.eslint": true
+    }
+    
 }
